Update CHANGELOG and README for 0.1.7 release
Add 0.1.7 changelog entry covering JLine 3.30.0 upgrade and
dependency updates. Add Java 22+ native access warning section
to README. Bump version references from 0.1.4 to 0.1.7.